<resources>
    <string name="app_name">Fire Warning</string>
    <string name="ob_header1">SIMPLE ABROAD CALLS</string>
    <string name="ob_header2">FREE WONEP TO WONEP</string>
    <string name="ob_header3">NO HIDDEN CHARGES OR FEES</string>

    <string name="ob_get_started">GET STARTED</string>

    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>

    <string name="demo_content">Do nhu cầu mở rộng và phát triển công ty với mục tiêu trở thành nhà cung cấp và sản xuất thiết bị hàng đầu trong nước,</string>
    <string name="demo_title">TechNo Corporation</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="chon_ngay">Chọn ngày</string>
    <string name="errorProcess">Có lỗi xảy ra trong quá trình xử lý. Vui lòng kiểm tra lại.</string>
    <string name="ok">Đồng ý</string>
    <string name="errorNetwork">Bạn vui lòng kiểm tra lại kết nối mạng</string>
    <string name="exception">Đã có lỗi không xác định xảy ra, vui lòng liên hệ với quản trị để được trợ giúp!</string>
    <string name="require_2g">Mạng của bạn hiện tại là 2G. Giao dịch có thể chậm</string>
    <string name="require_3g">Mạng của bạn hiện tại là 3G.</string>
    <string name="require_4g">Mạng của bạn hiện tại là 4G.</string>
    <string name="require_wifi">Mạng của bạn hiện tại là WIFI.</string>
    <string name="require_netwotk_unknown">Mạng của bạn không xác định.</string>
    <string name="checkgps">Không lấy được tọa độ ! Bạn vui lòng ra khỏi khu vực có mái che để lấy được tọa độ.</string>
    <string name="cannot_get_location">Không lấy được tọa độ, bạn vui lòng kiểm tra lại GPS .</string>
    <string name="confirmspport">Bạn có muốn gọi đến số %s để được hỗ trợ sử dụng phần mềm ?</string>
    <string name="cancel">Hủy</string>
    <string name="lowMemory">Bộ nhớ RAM còn lại %1$s MB, điều này có thể gây ra 1 số lỗi trong quá trình sử dụng. Ứng dụng chỉ hoạt động ổn định với thiết bị có bộ nhớ RAM lớn hơn %2$s MB</string>
    <string name="okMemory">Bộ nhớ RAM còn lại %1$s MB</string>
    <string name="unknown_host_exception">Xin lỗi, không kết nối được đến máy chủ, vui lòng đảm bảo đã tắt wifi, sim được khai kết nối đầy đủ và đã cài đặt s-intranet!</string>
    <string name="connect_timeout_exception">Xin lỗi, bạn chưa có kết nối đến hệ thống, vui lòng đảm bảo đã tắt wifi, sim được khai kết nối đầy đủ và đã cài đặt s-intranet!</string>
    <string name="socket_timeout_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng!</string>
    <string name="http_host_connect_exception">Quá trình phản hồi từ máy chủ bị gián đoạn! Vui lòng kiểm tra kết nối và đường truyền mạng!</string>
    <string name="socket_close_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng và thực hiện lại!</string>
    <string name="illegal_state_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng và thực hiện lại!</string>
    <string name="socket_io_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng và thực hiện lại!</string>
    <string name="txt_transaction_timeout">Giao dịch đang được xử lý. Vui lòng kiểm tra lại kết quả sau 5 phút!</string>
    <string name="txt_todate_after_currentdate">Đến ngày không được lớn hơn ngày hiện tại!</string>
    <string name="checktimeupdatejob">Từ ngày phải nhỏ hơn hoặc bằng đến ngày</string>
    <string name="duration_over_load">Bạn chỉ được tìm kiếm trong khoảng thời gian %s ngày.</string>
    <string name="default_notification_channel_id">113</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="light">Đèn</string>
    <string name="fan">Quạt</string>
    <string name="table_light">Đèn bàn</string>
    <string name="air_conditioner">Điều hòa</string>
    <string name="tv">TV</string>
    <string name="bed_room">Phòng ngủ</string>
    <string name="kitchen">Bếp</string>
    <string name="dinning">Phòng ăn</string>
    <string name="hall">Sảnh</string>
    <string name="bath_room">Nhà tắm</string>
    <string name="name">Tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ </string>
    <string name="email">Email</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="log_out">Đăng xuất</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="save_user">Lưu tài khoản</string>
    <string name="back_to_login">Quay lại đăng nhập</string>
    <string name="create_account"><u>Tạo tài khoản</u></string>
    <string name="press_back_again">Bấm back lần nữa để thoát ứng dụng</string>
    <string name="input_not_enough">Vui lòng nhập đủ thông tin!</string>
    <string name="sign_up_success">Đăng ký thành công !</string>
    <string name="login_success">Đăng nhập thành công !</string>
    <string name="sign_up_fail">Email đã tồn tại !</string>
    <string name="login_fail">Sai tên email hoặc mật khẩu !</string>
</resources>
