<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.khanhlh.labs.smarthome.model.User" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.activity.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="@drawable/bg_2" />

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circle_white"
                    android:elevation="2dp"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@drawable/logo" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/gradient_row_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/ic_user" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:background="#CACACA" />

                    <EditText
                        android:id="@+id/txtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:text="@{user.username}"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/hintColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/ic_password" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:background="#CACACA" />

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@{user.password}"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/hintColor" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:padding="10dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/ic_password" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:background="#CACACA" />

                    <EditText
                        android:id="@+id/txtRePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="RePassword"
                        android:inputType="textPassword"
                        android:text="@{user.password}"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/hintColor" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="end"
                        android:layout_marginLeft="16dp"
                        android:padding="10dp"
                        android:text="@string/create_account"
                        android:textColor="@color/textColor"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:layout_marginRight="20dp"
                        android:padding="10dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/textColor"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/gradient_row_bg"
                        android:onClick="onLoginClicked"
                        android:paddingLeft="100dp"
                        android:paddingTop="10dp"
                        android:paddingRight="100dp"
                        android:paddingBottom="10dp"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btnSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/gradient_row_bg"
                        android:onClick="onLoginClicked"
                        android:paddingLeft="100dp"
                        android:paddingTop="10dp"
                        android:paddingRight="100dp"
                        android:paddingBottom="10dp"
                        android:text="Sign Up"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>